<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.fragment_tablayout.ForYouFragment">


        <LinearLayout
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black2"
                    android:id="@+id/tvTitleBold_NewRelease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bold_new_release" />

                <TextView
                    android:layout_below="@id/tvTitleBold_NewRelease"
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_normal_new_release" />

                <TextView
                    android:id="@+id/textView3"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:orientation="horizontal"
                android:id="@+id/rvNewReleaseFilms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black2"
                    android:layout_centerVertical="true"
                    android:id="@+id/tvTitleBold_Bollywood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bold_bollywood_hits" />

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:orientation="horizontal"
                android:id="@+id/rvBollywoodFilms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/black2"
                    android:layout_centerVertical="true"
                    android:id="@+id/tvTitleBoldTopGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bold_top_genres" />

                <TextView
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:orientation="horizontal"
                android:id="@+id/rvTopGenresFilms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
